--- a/H2AIndex/UI/Styles/Controls.TabView.xaml
+++ b/H2AIndex/UI/Styles/Controls.TabView.xaml
@@ -100,230 +100,15 @@
                 <Border x:Name="innerBorder" BorderBrush="{DynamicResource TabItem.Selected.Border}" BorderThickness="1,1,1,0" Background="{DynamicResource TabItem.Selected.Background}" Margin="-1" Opacity="0" />
             </Border>
 
-            <StackPanel Orientation="Horizontal">
+            <Grid>
                 <ContentPresenter x:Name="contentPresenter"
                                   ContentSource="Header" 
                                   Focusable="False"
-                                  HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" 
+                                  HorizontalAlignment="Stretch" 
                                   Margin="{TemplateBinding Padding}" 
                                   RecognizesAccessKey="True" 
                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
                                   VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
-            </StackPanel>
-        </Grid>
-        <ControlTemplate.Triggers>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,0,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,0,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,0,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,0,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="0,1,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="0,1,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.MouseOver.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56" />
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,0,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,0,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56" />
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,0,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,0,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56" />
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="0,1,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="0,1,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56" />
-                <Setter Property="Background" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Background}" />
-                <Setter Property="BorderBrush" TargetName="mainBorder" Value="{DynamicResource TabItem.Disabled.Border}" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,0,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,0,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Left" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Panel.ZIndex" Value="1" />
-                <Setter Property="Margin" Value="-2,-2,0,-2" />
-                <Setter Property="Opacity" TargetName="innerBorder" Value="1" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,0,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,0,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,0,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,0,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Bottom" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Panel.ZIndex" Value="1" />
-                <Setter Property="Margin" Value="-2,0,-2,-2" />
-                <Setter Property="Opacity" TargetName="innerBorder" Value="1" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,0,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,0,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="0,1,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="0,1,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Right" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Panel.ZIndex" Value="1" />
-                <Setter Property="Margin" Value="0,-2,-2,-2" />
-                <Setter Property="Opacity" TargetName="innerBorder" Value="1" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="0,1,1,1" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="0,1,1,1" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="false" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0" />
-            </MultiDataTrigger>
-            <MultiDataTrigger>
-                <MultiDataTrigger.Conditions>
-                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Self}}" Value="true" />
-                    <Condition Binding="{Binding TabStripPlacement, RelativeSource={RelativeSource AncestorType={x:Type TabControl}}}" Value="Top" />
-                </MultiDataTrigger.Conditions>
-                <Setter Property="Panel.ZIndex" Value="1" />
-                <Setter Property="Margin" Value="-2,-2,-2,0" />
-                <Setter Property="Opacity" TargetName="innerBorder" Value="1" />
-                <Setter Property="BorderThickness" TargetName="innerBorder" Value="1,1,1,0" />
-                <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0" />
-            </MultiDataTrigger>
-        </ControlTemplate.Triggers>
-    </ControlTemplate>
-
-    <!--<ControlTemplate x:Key="HostedTabItemTemplate" TargetType="{x:Type ui:ContentHostTab}">
-        <Grid x:Name="templateRoot" SnapsToDevicePixels="true">
-
-            <Border x:Name="mainBorder" 
-                                BorderBrush="{TemplateBinding BorderBrush}" 
-                                BorderThickness="1,1,1,0" 
-                                Background="{TemplateBinding Background}" 
-                                Margin="0">
-                <Border x:Name="innerBorder" BorderBrush="{DynamicResource TabItem.Selected.Border}" BorderThickness="1,1,1,0" Background="{DynamicResource TabItem.Selected.Background}" Margin="-1" Opacity="0" />
-            </Border>
-
-            <Grid HorizontalAlignment="Stretch">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
-                <ContentPresenter x:Name="contentPresenter"
-                                  Grid.Column="0"
-                                  ContentSource="Header" 
-                                  Focusable="False"
-                                  HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" 
-                                  Margin="{TemplateBinding Padding}" 
-                                  RecognizesAccessKey="True" 
-                                  SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
-                                  VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
-
-                <Button x:Name="PART_BtnClose"
-                        Grid.Column="1"
-                        VerticalAlignment="Center"
-                        VerticalContentAlignment="Center"
-                        HorizontalAlignment="Right"
-                        Command="{TemplateBinding CloseTabCommand}"
-                        Visibility="{TemplateBinding CloseTabCommand, Converter={StaticResource NullVisibilityConverter}}">
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Background="Transparent" HorizontalAlignment="Right">
-                                <Path Data="M0,0 L6,6 M6,0 L0,6" StrokeThickness="2" VerticalAlignment="Center" Margin="5,2,5,0" Stroke="{TemplateBinding Foreground}" />
-                            </Border>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Foreground" Value="{DynamicResource Brush.Foreground.Static}"/>
-                                </Trigger>
-                                <Trigger Property="IsMouseOver" Value="False">
-                                    <Setter Property="Foreground" Value="{DynamicResource TreeViewItem.MouseOver.Border}"/>
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
             </Grid>
         </Grid>
         <ControlTemplate.Triggers>
@@ -488,6 +273,6 @@
                 <Setter Property="BorderThickness" TargetName="mainBorder" Value="1,1,1,0" />
             </MultiDataTrigger>
         </ControlTemplate.Triggers>
-    </ControlTemplate>-->
+    </ControlTemplate>
 
 </ResourceDictionary>
