--- a/H2AIndex/UI/Styles/Controls.xaml
+++ b/H2AIndex/UI/Styles/Controls.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
 
+        <ResourceDictionary Source="/UI/Styles/Controls.AvalonEdit.xaml" />
         <ResourceDictionary Source="/UI/Styles/Controls.Button.xaml" />
         <ResourceDictionary Source="/UI/Styles/Controls.CheckBox.xaml" />
         <ResourceDictionary Source="/UI/Styles/Controls.ComboBox.xaml" />
