--- a/H2AIndex/Views/ModelView.xaml
+++ b/H2AIndex/Views/ModelView.xaml
@@ -38,12 +38,12 @@
                         Camera="{Binding Camera}"
                         Background="{DynamicResource Brush.Deep.2.Background.Static}"
                         BackgroundColor="{DynamicResource Color.Deep.2.Background.Static}"
-                        TextBrush="Wheat"
+                        TextBrush="White"
                         Foreground="White"
                         CameraMode="Inspect"
-                        CameraRotationMode="Turntable"
+                        CameraRotationMode="Trackball"
                         EnableSwapChainRendering="False"
-                        FXAALevel="Low"
+                        FXAALevel="{Binding Options.RenderFxaaQuality}"
                         EffectsManager="{Binding EffectsManager}"
                         IsHitTestVisible="True"
                         IsMoveEnabled="True"
@@ -61,6 +61,19 @@
             <hx:Element3DPresenter Content="{Binding Model}" >
             </hx:Element3DPresenter>
         </hx:Viewport3DX>
+
+        <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="5">
+            <Label ContentStringFormat="FPS: {0:0.00}" Padding="0" 
+                   Content="{Binding FrameRate, ElementName=Viewport}"
+                   Visibility="{Binding Options.ShowFps, Converter={StaticResource BoolVisibilityConverter}}" />
+
+            <Label ContentStringFormat="Meshes: {0:#,0}" Padding="0" Margin="0,10,0,0" Content="{Binding MeshCount}"
+                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
+            <Label ContentStringFormat="Vertices: {0:#,0}" Padding="0" Content="{Binding VertexCount}" 
+                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
+            <Label ContentStringFormat="Faces: {0:#,0}" Padding="0" Content="{Binding FaceCount}" 
+                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
+        </StackPanel>
 
         <GridSplitter Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" />
 
