--- a/H2AIndex/UI/Templates/Template.WindowModal.xaml
+++ b/H2AIndex/UI/Templates/Template.WindowModal.xaml
@@ -1,6 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:modal="clr-namespace:H2AIndex.UI.Modals">
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/UI/Styles/Controls.Button.xaml" />
+    </ResourceDictionary.MergedDictionaries>
 
     <ControlTemplate x:Key="Template.WindowModal" TargetType="{x:Type modal:WindowModal}">
         <Grid MinHeight="{Binding ModalMinHeight, RelativeSource={RelativeSource TemplatedParent}}"
@@ -81,6 +84,9 @@
 
                     <ItemsControl ItemsSource="{Binding FooterButtons, RelativeSource={RelativeSource TemplatedParent}}"
                                   HorizontalAlignment="Right">
+                        <ItemsControl.Resources>
+                            <Style x:Name="FooterButtonStyle" TargetType="{x:Type Button}" BasedOn="{StaticResource FooterButtonStyle}" />
+                        </ItemsControl.Resources>
                         <ItemsControl.ItemsPanel>
                             <ItemsPanelTemplate>
                                 <StackPanel Orientation="Horizontal" />
