--- a/H2AIndex/Views/AboutView.xaml
+++ b/H2AIndex/Views/AboutView.xaml
@@ -22,6 +22,7 @@
 
                 <StackPanel Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Image Source="pack://application:,,,/H2AIndex;component/Index.png"
+                           RenderOptions.BitmapScalingMode="HighQuality"
                            Grid.Column="0"
                            Height="125"
                            Width="125"/>
