--- a/H2AIndex/Views/ModelView.xaml
+++ b/H2AIndex/Views/ModelView.xaml
@@ -21,64 +21,44 @@
             <ColumnDefinition Width="1*" MaxWidth="400" />
         </Grid.ColumnDefinitions>
 
-        <Menu Grid.ColumnSpan="3"
+        <Menu Grid.ColumnSpan="2"
               Grid.Row="0">
             <MenuItem Header="File">
                 <MenuItem Header="Export" Command="{Binding ExportModelCommand}" />
             </MenuItem>
             <MenuItem Header="View">
                 <MenuItem Header="Show Wireframe" IsCheckable="True" IsChecked="{Binding ShowWireframe}" />
-                <MenuItem Header="Zoom To Extents" Command="hx:ViewportCommands.ZoomExtents" />
+                <MenuItem Header="Zoom To Extents" Command="hx:ViewportCommands.ZoomExtents" CommandTarget="{Binding Viewport}" />
             </MenuItem>
         </Menu>
+        <ToggleButton Grid.Row="0" 
+                      Grid.Column="0" 
+                      HorizontalAlignment="Right"
+                      ToolTip="Use Flycam"
+                      IsChecked="{Binding UseFlycam}">
+            <ToggleButton.Content>
+                <Path Data="{Binding Source={StaticResource Icon_Crosshair}, Path=Data}"
+                                  Fill="{DynamicResource Brush.Glyph.Static}" 
+                                  Stretch="Uniform"
+                                  Width="14"
+                                  Height="14" />
+            </ToggleButton.Content>
+        </ToggleButton>
 
-        <hx:Viewport3DX x:Name="Viewport"
-                        Grid.Column="0"
-                        Grid.Row="1"
-                        Camera="{Binding Camera}"
-                        Background="{DynamicResource Brush.Deep.2.Background.Static}"
-                        BackgroundColor="{DynamicResource Color.Deep.2.Background.Static}"
-                        TextBrush="White"
-                        Foreground="White"
-                        CameraMode="Inspect"
-                        CameraRotationMode="Turntable"
-                        EnableSwapChainRendering="False"
-                        FXAALevel="{Binding Options.RenderFxaaQuality}"
-                        EffectsManager="{Binding EffectsManager}"
-                        IsHitTestVisible="True"
-                        IsMoveEnabled="True"
-                        ZoomDistanceLimitNear="0"
-                        EnableRenderFrustum="False">
-
-            <hx:Viewport3DX.InputBindings>
-                <MouseBinding Command="hx:ViewportCommands.Rotate" Gesture="RightClick" />
-                <MouseBinding Command="hx:ViewportCommands.Zoom" Gesture="MiddleClick" />
-                <MouseBinding Command="hx:ViewportCommands.Pan" Gesture="LeftClick" />
-            </hx:Viewport3DX.InputBindings>
-
-
-            <hx:DirectionalLight3D Direction="{Binding Camera.LookDirection}" Color="#FFF" />
-
-            <hx:Element3DPresenter Content="{Binding Model}" >
-            </hx:Element3DPresenter>
-        </hx:Viewport3DX>
-
-        <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="5">
-            <Label ContentStringFormat="FPS: {0:0.00}" Padding="0" 
-                   Content="{Binding FrameRate, ElementName=Viewport}"
-                   Visibility="{Binding Options.ShowFps, Converter={StaticResource BoolVisibilityConverter}}" />
-
-            <Label ContentStringFormat="Meshes: {0:#,0}" Padding="0" Margin="0,10,0,0" Content="{Binding MeshCount}"
-                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
-            <Label ContentStringFormat="Vertices: {0:#,0}" Padding="0" Content="{Binding VertexCount}" 
-                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
-            <Label ContentStringFormat="Faces: {0:#,0}" Padding="0" Content="{Binding FaceCount}" 
-                   Visibility="{Binding Options.ShowModelInfo, Converter={StaticResource BoolVisibilityConverter}}"/>
-        </StackPanel>
+        <controls:ModelViewerControl x:Name="ModelViewer" 
+                                     Grid.Row="1" 
+                                     Grid.Column="0"
+                                     Camera="{Binding Camera}"
+                                     EffectsManager="{Binding EffectsManager}"
+                                     Model="{Binding Model}"
+                                     MinMoveSpeed="{Binding MinMoveSpeed}"
+                                     MoveSpeed="{Binding MoveSpeed}"
+                                     MaxMoveSpeed="{Binding MaxMoveSpeed}"
+                                     UseFlycam="{Binding UseFlycam}" />
 
         <GridSplitter Grid.Column="1" Grid.Row="1" HorizontalAlignment="Stretch" />
 
-        <Grid Grid.Column="2" Grid.Row="1">
+        <Grid Grid.Column="2" Grid.Row="0" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="20" />
